--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Fiction'
 - !lcc 'PS'
+- GITenberg
 title: The Paliser case
 url: http://www.gutenberg.org/ebooks/29847
